[gd_scene load_steps=13 format=4 uid="uid://bojd4turtuu7f"]

[ext_resource type="Texture2D" uid="uid://c8dqm2t52mlvy" path="res://sprites/tilemaps/tile_captures/tile_ui.png" id="1_7wffp"]
[ext_resource type="Script" uid="uid://d3656qxysmfyq" path="res://scripts/main_ui/board_ui.gd" id="1_fhnlk"]
[ext_resource type="Script" uid="uid://d10xs08ugxfss" path="res://scripts/main_ui/game.gd" id="1_q3ffm"]
[ext_resource type="Script" uid="uid://cc7akoownbe0k" path="res://scripts/claims/claim_data.gd" id="2_gphvf"]
[ext_resource type="Resource" uid="uid://ej04cfpihcpx" path="res://Resources/claims/main_player.tres" id="3_n3ddt"]
[ext_resource type="Resource" uid="uid://b7hd3vdjnkml6" path="res://Resources/claims/purple_claim.tres" id="4_alpnb"]
[ext_resource type="Resource" uid="uid://bi1dlfq3ngrj2" path="res://Resources/claims/yellow_claim.tres" id="5_5pcqp"]
[ext_resource type="Resource" uid="uid://bsa8sbwsvlufq" path="res://Resources/claims/red_claim.tres" id="6_7p6mn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fhnlk"]
resource_name = "Tile_capture"
texture = ExtResource("1_7wffp")
texture_region_size = Vector2i(8, 8)
use_texture_padding = false
1:0/0 = 0
1:0/0/custom_data_0 = 1
0:0/0 = 0
3:0/0 = 0
3:0/0/custom_data_0 = 3
2:0/0 = 0
2:0/0/custom_data_0 = 2
4:0/0 = 0
4:0/0/custom_data_0 = 4
1:1/0 = 0
1:1/0/custom_data_0 = 1
1:1/0/custom_data_1 = 1
1:2/0 = 0
1:2/0/custom_data_0 = 1
1:2/0/custom_data_1 = 2
2:1/0 = 0
2:1/0/custom_data_0 = 2
2:1/0/custom_data_1 = 1
3:1/0 = 0
3:1/0/custom_data_0 = 3
3:1/0/custom_data_1 = 1
4:1/0 = 0
4:1/0/custom_data_0 = 4
4:1/0/custom_data_1 = 1
0:1/0 = 0
0:1/0/custom_data_1 = 1
0:3/0 = 0
0:3/0/custom_data_1 = 3
1:3/0 = 0
1:3/0/custom_data_0 = 1
1:3/0/custom_data_1 = 3
2:3/0 = 0
2:3/0/custom_data_0 = 2
2:3/0/custom_data_1 = 3
3:3/0 = 0
3:3/0/custom_data_0 = 3
3:3/0/custom_data_1 = 3
4:3/0 = 0
4:3/0/custom_data_0 = 4
4:3/0/custom_data_1 = 3

[sub_resource type="TileSet" id="TileSet_q3ffm"]
tile_shape = 3
tile_size = Vector2i(8, 8)
custom_data_layer_0/name = "ownership"
custom_data_layer_0/type = 2
custom_data_layer_1/name = "type"
custom_data_layer_1/type = 2
sources/0 = SubResource("TileSetAtlasSource_fhnlk")

[sub_resource type="InputEventKey" id="InputEventKey_n3ddt"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_alpnb"]
events = [SubResource("InputEventKey_n3ddt")]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 1136.0
offset_bottom = 632.0
script = ExtResource("1_q3ffm")
claims = Array[ExtResource("2_gphvf")]([ExtResource("3_n3ddt"), ExtResource("4_alpnb"), ExtResource("5_5pcqp"), ExtResource("6_7p6mn")])

[node name="board border" type="Panel" parent="game"]
custom_minimum_size = Vector2(608, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.77

[node name="board" type="PanelContainer" parent="game/board border"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 592.0
offset_bottom = 592.0
script = ExtResource("1_fhnlk")
impasable_tile_count = 130
fuel_tile_count = 20

[node name="main_grid" type="TileMapLayer" parent="game/board border/board"]
editor_description = "Grid is 7 by 10"
position = Vector2(288, 296)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD/////AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAABAP7/AAAAAAAAAAD///7/AAAAAAAAAAADAP3/AAAAAAAAAAADAPz/AAAAAAAAAAADAPv/AAAAAAAAAAACAPv/AAAAAAAAAAABAPv/AAAAAAAAAAAAAPv/AAAAAAAAAAD///v/AAAAAAAAAAD+//v/AAAAAAAAAAD9//v/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD7//3/AAAAAAAAAAD8//7/AAAAAAAAAAD7////AAAAAAAAAAD8/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAAAAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAADAP//AAAAAAAAAAADAP7/AAAAAAAAAAACAPz/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAAAAPz/AAAAAAAAAAD///z/AAAAAAAAAAD+//z/AAAAAAAAAAD9//z/AAAAAAAAAAD8//3/AAAAAAAAAAD9//7/AAAAAAAAAAD+//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8////AAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD+////AAAAAAAAAAD+//3/AAAAAAAAAAD9//3/AAAAAAAAAAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAD7//v/AAAAAAAAAAADAPr/AAAAAAAAAAACAPr/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPr/AAAAAAAAAAD///r/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAD8//r/AAAAAAAAAAAEAAQAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wAAAAAAAAAAAAD7//7/AAAAAAAAAAD7//z/AAAAAAAAAAD7//r/AAAAAAAAAAD7//n/AAAAAAAAAAD8//n/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAD///n/AAAAAAAAAAAAAPn/AAAAAAAAAAABAPn/AAAAAAAAAAACAPn/AAAAAAAAAAADAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAIAAAAAAAAAAAD3//P/AAAAAAAAAAD3//T/AAAAAAAAAAD3//X/AAAAAAAAAAD3//b/AAAAAAAAAAD3//f/AAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD3/woAAAAAAAAAAAD3/wsAAAAAAAAAAAD4//P/AAAAAAAAAAD4//T/AAAAAAAAAAD4//X/AAAAAAAAAAD4//b/AAAAAAAAAAD4//f/AAAAAAAAAAD4//j/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAAAAAAAAAD4/woAAAAAAAAAAAD4/wsAAAAAAAAAAAD5//P/AAAAAAAAAAD5//T/AAAAAAAAAAD5//X/AAAAAAAAAAD5//b/AAAAAAAAAAD5//f/AAAAAAAAAAD5//j/AAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD6//P/AAAAAAAAAAD6//T/AAAAAAAAAAD6//X/AAAAAAAAAAD6//b/AAAAAAAAAAD6//f/AAAAAAAAAAD6//j/AAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD7//P/AAAAAAAAAAD7//T/AAAAAAAAAAD7//X/AAAAAAAAAAD7//b/AAAAAAAAAAD7//f/AAAAAAAAAAD7//j/AAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAD8//P/AAAAAAAAAAD8//T/AAAAAAAAAAD8//X/AAAAAAAAAAD8//b/AAAAAAAAAAD8//f/AAAAAAAAAAD8//j/AAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD9//P/AAAAAAAAAAD9//T/AAAAAAAAAAD9//X/AAAAAAAAAAD9//b/AAAAAAAAAAD9//f/AAAAAAAAAAD9//j/AAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD+//P/AAAAAAAAAAD+//T/AAAAAAAAAAD+//X/AAAAAAAAAAD+//b/AAAAAAAAAAD+//f/AAAAAAAAAAD+//j/AAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD///P/AAAAAAAAAAD///T/AAAAAAAAAAD///X/AAAAAAAAAAD///b/AAAAAAAAAAD///f/AAAAAAAAAAD///j/AAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAAAAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAPP/AAAAAAAAAAABAPT/AAAAAAAAAAABAPX/AAAAAAAAAAABAPb/AAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAPP/AAAAAAAAAAACAPT/AAAAAAAAAAACAPX/AAAAAAAAAAACAPb/AAAAAAAAAAACAPf/AAAAAAAAAAACAPj/AAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAPP/AAAAAAAAAAADAPT/AAAAAAAAAAADAPX/AAAAAAAAAAADAPb/AAAAAAAAAAADAPf/AAAAAAAAAAADAPj/AAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAPP/AAAAAAAAAAAEAPT/AAAAAAAAAAAEAPX/AAAAAAAAAAAEAPb/AAAAAAAAAAAEAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAEAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAPP/AAAAAAAAAAAFAPT/AAAAAAAAAAAFAPX/AAAAAAAAAAAFAPb/AAAAAAAAAAAFAPf/AAAAAAAAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAPP/AAAAAAAAAAAGAPT/AAAAAAAAAAAGAPX/AAAAAAAAAAAGAPb/AAAAAAAAAAAGAPf/AAAAAAAAAAAGAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAPP/AAAAAAAAAAAHAPT/AAAAAAAAAAAHAPX/AAAAAAAAAAAHAPb/AAAAAAAAAAAHAPf/AAAAAAAAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAPP/AAAAAAAAAAAIAPT/AAAAAAAAAAAIAPX/AAAAAAAAAAAIAPb/AAAAAAAAAAAIAPf/AAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAD2/wsAAAAAAAAAAAD2/wkAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wEAAAAAAAAAAAD2////AAAAAAAAAAD2//3/AAAAAAAAAAD2//v/AAAAAAAAAAD2//n/AAAAAAAAAAD2//f/AAAAAAAAAAD2//X/AAAAAAAAAAD2//P/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_q3ffm")

[node name="overlay_grid" type="TileMapLayer" parent="game/board border/board"]
modulate = Color(0.5, 0.5, 0.5, 0.25490198)
position = Vector2(288, 296)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_q3ffm")

[node name="input border" type="PanelContainer" parent="game"]
custom_minimum_size = Vector2(508, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="game/input border"]
layout_mode = 2

[node name="inputs" type="BoxContainer" parent="game/input border/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
vertical = true

[node name="next_turn" type="Button" parent="game/input border/BoxContainer/inputs"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_alpnb")
text = "Next Turn"

[node name="new_game" type="Button" parent="game/input border/BoxContainer/inputs"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="tile_Info" type="RichTextLabel" parent="game/input border/BoxContainer/inputs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="Data" type="BoxContainer" parent="game/input border/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="game_Info" type="RichTextLabel" parent="game/input border/BoxContainer/Data"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
bbcode_enabled = true
text = "Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="claims_Info" type="RichTextLabel" parent="game/input border/BoxContainer/Data"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Game Text"

[node name="clock" type="Timer" parent="game"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="game_state_change" from="game/board border/board" to="game" method="game_state_changed"]
[connection signal="gui_input" from="game/board border/board" to="game/board border/board" method="_on_gui_input"]
[connection signal="mouse_entered" from="game/board border/board" to="game/board border/board" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="game/board border/board" to="game/board border/board" method="_on_mouse_exited"]
[connection signal="tile_info" from="game/board border/board" to="game" method="_on_board_tile_info"]
[connection signal="pressed" from="game/input border/BoxContainer/inputs/next_turn" to="game" method="on_next_turn"]
[connection signal="pressed" from="game/input border/BoxContainer/inputs/new_game" to="game" method="new_game"]
